Fixed UI bug. Now person cards appear in a column on small devices.

--- a/client/src/components/CharacterCard/character-card.module.css
+++ b/client/src/components/CharacterCard/character-card.module.css
@@ -23,7 +23,6 @@
 
 @media (max-width: 600px) {
     .container {
-        margin: 10px 0;
-        width: 100%;
+        flex-direction: column;
     }
 }
